<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".loginCadastros.LoginFragment">

    <data>
        <variable
            name="loginFragment"
            type="com.example.aprendizagem.loginCadastros.LoginFragment"/>

        <variable
            name="mainactivity"
            type="com.example.aprendizagem.loginCadastros.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.559"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/iconeapp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconContentDescription="@string/icone_email"
            android:hint="@string/e_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textSenha"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconContentDescription="@string/icone_senha"
            app:endIconMode="password_toggle"
            android:hint="@string/senha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/bnt_login_google"
            android:layout_width="195dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTintMode="screen"
            android:scaleType="centerCrop"
            android:src="@drawable/bnt_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <ImageButton
            android:id="@+id/bnt_login_facebook"
            android:layout_width="195dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:backgroundTintMode="screen"
            android:src="@drawable/bnt_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSenha" />

        <TextView
            android:id="@+id/tv_cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cadastro nativo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/purple_500"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bnt_login_google"
            app:layout_constraintVertical_bias="0.33" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>